Fixed home.css image wrap
- Fixed the image wrap issue in base.html

--- a/static/base.css
+++ b/static/base.css
@@ -31,7 +31,7 @@ html, body {
 }
 
 body {
-  padding-top: 70px;
+  /* padding-top: 70px; */
 }
 
 /* Main content spacing */
@@ -54,6 +54,7 @@ img, video, iframe {
 }
 
 nav {
+  height: 70px; /*match the height of the footer*/
   position: fixed;
   top: 0;
   width: 100%;
@@ -94,27 +95,29 @@ nav ul li:hover a {
 
 /* Footer Styles */
 footer {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  height: 70px; 
   background-color: #282c37;
   color: #d9e1e8;
-  padding: 20px 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
 }
 
 .footer-div {
   display: flex;
-  flex-direction: row;
   gap: 20px;
-  margin-top: 10px;
+  align-items: center;
 }
 
+/* Ensure SVG icons are centered and sized properly */
 .footer-div svg {
   width: 30px;
   height: 30px;
   fill: #d9e1e8;
+  display: block;
 }
+
 
 .insta, .discord, .linktree {
   width: 30px;
