--- a/static/home.css
+++ b/static/home.css
@@ -1,17 +1,28 @@
 /* HEADER Content */
 
-header{
-    width: 100%;
-    background-image: url("/static/Images/img_1.jpg");
-    background-size: cover;
-    height: 100vh; /* vh = viewport height, relative to the device's screen */
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    padding: 5px;
+header {
+  width: 100%;
+  height: 100vh;
+  background-image: url("/static/Images/img_1.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin: 0;
+  padding: 0;
   }
+
+html, body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  overflow-x: hidden;
+  }
+
 
   header h1, header h3{
     color: #d9e1e8;
